<resources>
    <string name="app_name">iGrade</string>
    <string name="side_menu_news">News</string>
    <string name="side_menu_contacts">Contacts</string>
    <string name="side_menu_bug_report">Bug report</string>
    <string name="side_menu_help">Updates</string>
    <string name="side_menu_settings">Settings</string>
    <string name="student_s_name">Student`s name</string>
    <string name="group">Group</string>
    <string name="teacher">Lecturer:</string>
    <string name="teacher1">Lecturer</string>
    <string name="schedule">Schedule:</string>
    <string name="read_more">Read more</string>
    <string name="email">english@misis.ru</string>
    <string name="phone">+7(916)927-73-05</string>
    <string name="join">Join us on Instagram!</string>
    <string name="instagram">\@kafedra_iyakt</string>
    <string name="save">SAVE</string>
    <string name="turn_on_notifications">Turn on notifications</string>
    <string name="appropriate_time">Appropriate time</string>
    <string name="ok">OK</string>
    <string name="maximum_points">Maximum points</string>
    <string name="description">Description</string>
    <string name="add_points">Add points</string>
    <string name="pointDialogTitle">Deleting points...</string>
    <string name="hometaskDialogTitle">Deleting hometask...</string>
    <string name="hometaskEditDialogTitle">Editing hometask...</string>
    <string name="messageEdit">Confirm edit?</string>

    <string-array name="language_list">
        <item>Русский</item>
        <item>English</item>
    </string-array>

    <string-array name="semesters_list">
        <item>1 semester</item>
        <item>2 semester</item>
        <item>3 semester</item>
        <item>4 semester</item>
        <item>5 semester</item>
        <item>6 semester</item>
        <item>7 semester</item>
        <item>8 semester</item>
        <item>9 semester</item>
        <item>10 semester</item>
    </string-array>

    <string-array name="types_of_marks_list_even">
        <item>Class Participation(Sept-Oct)</item>
        <item>Class Participation(Nov-Dec)</item>
        <item>Online(Sept-Oct)</item>
        <item>Online(Nov-Dec)</item>
        <item>Project(In-class session)</item>
        <item>Project(Online assignments)</item>
        <item>Midterm/Diagnostic</item>
        <item>Final Test/IELTS</item>
    </string-array>

    <string-array name="types_of_marks_list_odd">
        <item>Class Participation(Feb-Mar)</item>
        <item>Class Participation(Apr-May)</item>
        <item>Online(Feb-Mar)</item>
        <item>Online(Apr-May)</item>
        <item>Project(In-class session)</item>
        <item>Project(Online assignments)</item>
        <item>Midterm/Diagnostic</item>
        <item>Final Test/IELTS</item>
    </string-array>

    <string-array name="days_of_week">
        <item>Mon</item>
        <item>Tues</item>
        <item>Wed</item>
        <item>Thurs</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="news_toolbar">NEWS</string>
    <string name="contacts_toolbar">CONTACTS</string>
    <string name="settings_toolbar">SETTINGS</string>
    <string name="bug_report">BUG REPORT</string>
    <string name="message">Confirm delete?</string>
    <string name="accept">Yes</string>
    <string name="reject">No</string>
    <string name="your_points">Your points</string>
    <string name="menu_home">Home</string>
    <string name="your_hometask">Tools</string>
    <string name="selected_language">Selected language</string>
    <string name="notifications">Notifications</string>

    <string name="snackbarHigherMax">Mark can not be higher than the maximum.</string>
    <string name="snackbarLimitCount">Limit exceeded the number of evaluations of this type.</string>
    <string name="snackbarLimitPoints">Limit for the number of points for this type of assessment.</string>
    <string name="snackbarEmptyText">Hometask is empty</string>
    <string name="snackbarSave">Changes saved</string>
    <string name="snackbarNoOnline">No internet connection</string>

    <string name="CalendarBatton">Add new task</string>
    <string name="side_menu_updates">UPDATES</string>
    <string name="what_s_new">What\'s New?</string>
    <string name="version_history">Version History</string>
    <string name="day_3">Day 3</string>
    <string name="day_2">Day 2</string>
    <string name="day_1">Day 1</string>
    <string name="hintSchedule">Lecture room</string>
    <string name="hintFIO">Add FIO</string>
    <string name="hintGroup">Add group</string>
    <string name="teacherName">Ivanov Ivan Ivanovich</string>
    <string name="scheduleExample">Monday 1024 \nTuesday 1020A \nFriday 1024</string>
    <string name="yourMark">Your mark</string>

    <string name="mark_0"><![CDATA[Mark 0 – 0 points]]></string>
    <string name="mark_2"><![CDATA[Mark 2 – 1–50 points]]></string>
    <string name="mark_3"><![CDATA[Mark 3 – 51–69 points]]></string>
    <string name="mark_4"><![CDATA[Mark 4 – 70–84 points]]></string>
    <string name="mark_5"><![CDATA[Mark 5 - >84 points]]></string>

    <string-array name="update_news">
        <item>"Added functionality:
		Points:
			Record points for each semester separately (on the main screen you need to select the current semester)
			Select the type of points and check the correctness of the input
			Delete by long press on the points
			Calculation of points and conversion to evaluation
            You can see the translation criterion by clicking on the light
		Home tasks:
			Adding home task with a date selection (you can add only one task for one day)
			Edit and view your home task with a short press
			Ability to mark a task as completed
			Deletion by long press
			Displays upcoming tasks unchecked when creating a new record
		Sidebar:
			The tab with the contacts of the faculty
			Feedback tab (We welcome Your suggestions for new functionality and error messages or incorrect behavior of the application)
			The settings tab allows you to enter useful information that is displayed in the header of the side menu"	</item>
    </string-array>

    <string-array name="versions">
        <item>0.1.0</item>
    </string-array>

    <string-array name="date">
        <item>01.09.2019</item>
    </string-array>

</resources>

