<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/News"
            android:icon="@drawable/ic_sm_news"
            android:title="@string/side_menu_news"/>

        <item
            android:id="@+id/Contacts"
            android:icon="@drawable/ic_sm_contacts"
            android:title="@string/side_menu_contacts"/>

        <item
            android:id="@+id/BugReport"
            android:icon="@drawable/ic_sm_bug_report"
            android:title="@string/side_menu_bug_report"/>

        <item
            android:id="@+id/Help"
            android:icon="@drawable/ic_sm_help"
            android:title="@string/side_menu_help"/>

        <item
            android:id="@+id/Settings"
            android:icon="@drawable/ic_sm_settings"
            android:title="@string/side_menu_settings"/>

    </group>



</menu>
