<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:background="@color/colorSideHeaderBackground"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="3dp"
        android:paddingBottom="8dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:srcCompat="@drawable/ic_student_avatar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/student_s_name"
                android:fontFamily="@font/robotoregular"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textColor="@color/colorToolBarText"/>

            <ImageButton
                android:id="@+id/extraInfoButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_down_arrow" />

        </RelativeLayout>

        <TextView
            android:id="@+id/userGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group"
            android:fontFamily="@font/robotoregular"
            android:textSize="13sp"
            android:textColor="@color/colorStudentsGroup"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/extra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorExtraInfoBackground"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/teacher"
            android:fontFamily="@font/robotoregular"
            android:textSize="13sp"
            android:textColor="@color/colorTextExtraInfo" />

        <TextView
            android:id="@+id/teacherName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/teacherName"
            android:fontFamily="@font/robotoregular"
            android:textSize="13sp"
            android:textColor="@color/colorTextExtraInfoUpdated" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/schedule"
            android:fontFamily="@font/robotoregular"
            android:textSize="13sp"
            android:textColor="@color/colorTextExtraInfo" />

        <TextView
            android:id="@+id/schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/scheduleExample"
            android:fontFamily="@font/robotoregular"
            android:textSize="13sp"
            android:textColor="@color/colorTextExtraInfoUpdated" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#7b7b7b" />

    </LinearLayout>
</LinearLayout>