<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorActivityBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/score_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/robotoregular"
        android:text="YOUR SCORE\n0/100"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorTextFragment"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/robotoregular"
        android:text="@string/yourMark"
        android:textAlignment="center"
        android:textColor="@color/colorTextFragment"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_label" />

    <TextView
        android:id="@+id/yourMark"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/robotoregular"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/ColorMark"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/idea"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/idea"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="92dp"
        android:background="@color/colorActivityBackground"
        android:src="@drawable/ic_idea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/hint"
        android:layout_width="236dp"
        android:layout_height="122dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idea">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoregular"
                android:gravity="center"
                android:text="@string/mark_0"
                android:textColor="@color/colorNoteText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoregular"
                android:gravity="center"
                android:text="@string/mark_2"
                android:textColor="@color/colorNoteText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoregular"
                android:gravity="center"
                android:text="@string/mark_3"
                android:textColor="@color/colorNoteText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoregular"
                android:gravity="center"
                android:text="@string/mark_4"
                android:textColor="@color/colorNoteText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoregular"
                android:gravity="center"
                android:text="@string/mark_5"
                android:textColor="@color/colorNoteText"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>